--- a/sites/faqSites/festival.html
+++ b/sites/faqSites/festival.html
@@ -26,13 +26,202 @@
 
 <div id="everything" class="content-info" style="padding: 5px; text-align: center">
 
-    <div class="col-xs-12 header_back" onclick="history.go(-1);return true;">
-        <img src="../../img/max/arrow_left.gif" style="height: 30px; width: 30px">
+    <div class="row" style="padding: 0px; margin: 0px">
+        <div class="col-xs-4 header_back" onclick="history.go(-1);return true;">
+            <img src="../../img/max/arrow_left_back.gif" style="height: 30px; width: 86px">
+        </div>
+        <div class="col-xs-4 header_back header_title" style="text-align: center">TRAVEL</div>
+        <div class="col-xs-4 header_back"></div>
     </div>
-    <div class="col-xs-12 header_title">
-        FESTIVAL - QUESTIONS and ANSWERS
 
+    <label class="collapse" for="application">Application</label>
+    <input id="application" type="checkbox">
+    <div class="text_shown">
+        <p>For information about the Electric Love Festival use our app "Electric Love" available for
+            iOS, Android and other popular providers. It will be around in time for the festival.</p>
     </div>
+
+    <label class="collapse" for="aid">Cancer Aid Association "Mama, Papa hat Krebs"</label>
+    <input id="aid" type="checkbox">
+    <div class="text_shown">
+        <p>For each sold festival ticket the Electric Love Festival donates € 1,00 to the
+            Austrian Cancer Aid Association and supports its project "Mama, Papa hat Krebs" (engl. Mom, Dad has Cancer)</p>
+    </div>
+
+    <label class="collapse" for="phone">Charge your Mobile Phone</label>
+    <input id="phone" type="checkbox">
+    <div class="text_shown">
+        <p>Visit the Electric Love charging station and take one of our Red Bull Energy Packs for a fee to recharge
+            your mobile phone. After it is fully charged return the Energy Pack and get your deposit refunded.</p>
+    </div>
+
+    <label class="collapse" for="currency">Currency</label>
+    <input id="currency" type="checkbox">
+    <div class="text_shown">
+        <p>There is a special currency at the festival called Electric Love Token which is used for buying food,
+            drinks and merchandise. There are loads of possibilities to change your money (both cash and cashless)
+            into token at declared token stands all over the festival site. If you have left over token there is the
+            possibility to change them back into cash during the whole festival. The token bought in
+            advance (Token Bag) have a different design and cannot be changed back due to the discount!</p>
+    </div>
+
+    <label class="collapse" for="drug">Drugs</label>
+    <input id="drug" type="checkbox">
+    <div class="text_shown">
+        <p>The Electric Love Festival conduct an absolute zero tolerance policy with regard to drugs!
+            It is prohibited to use, deal or be in possession of drugs on both the festival grounds and the camping site.</p>
+    </div>
+
+    <label class="collapse" for="first">First Aid</label>
+    <input id="first" type="checkbox">
+    <div class="text_shown">
+        <p>There are several first aid tents all over the festival area. You can see their position on the map.</p>
+    </div>
+
+    <label class="collapse" for="food">First Aid</label>
+    <input id="food" type="checkbox">
+    <div class="text_shown">
+        <p>You´re hungry? That´s no problem. There are loads of different Electric Food Bars all over the area. Payment with token.</p>
+    </div>
+
+    <label class="collapse" for="forbidden">Forbidden Objects</label>
+    <input id="forbidden" type="checkbox">
+    <div class="text_shown">
+        <p>----</p>
+    </div>
+
+    <label class="collapse" for="host">Host</label>
+    <input id="host" type="checkbox">
+    <div class="text_shown">
+        <p>Revolution Event GmbH<br>
+            Neualmerstraße 37<br>
+            5400 Hallein<br>
+            Austria<br>
+
+            <b>www.revolutionevent.com</b></p>
+    </div>
+
+    <label class="collapse" for="rules">House Rules</label>
+    <input id="rules" type="checkbox">
+    <div class="text_shown">
+        <p>In this case the general terms and conditions of the Revolution Event GmbH, the house rules of IGM Salzburgring and the extra listed festival and camping rules do apply.<br>
+            <a href="http://www.revolutionevent.com/web/agb" style="color: grey;">http://www.revolutionevent.com/web/agb</a><br>
+
+            <a href="http://www.salzburgring.com/content/die-rennstrecke/ringordnung/" style="color: grey">http://www.salzburgring.com/content/die-rennstrecke/ringordnung/</a>
+        </p>
+    </div>
+
+    <label class="collapse" for="lost">Info/Lost&Found</label>
+    <input id="lost" type="checkbox">
+    <div class="text_shown">
+        <p>You get all relevant information about the festival, train & bus time tables and earplugs at our Info/Lost&Found Stands.<br>
+            After the festival all found objects will be given to the municipal office Koppl from Tuesday the 14th of July 2015.</p>
+        <p>E-Mail:<br>gemeindeamt@koppl.com</p>
+        <p>Phone: +43 (0) 6221/7213-0<br>
+            Opening hours:<br>
+            MO: 08h00 - 12h00 & 14h00 - 18h00<br>
+            TUE-FR: 08h00 - 12h00</p>
+    </div>
+
+    <label class="collapse" for="jobs">Jobs at Electric Love Festival</label>
+    <input id="jobs" type="checkbox">
+    <div class="text_shown">
+        <p> If you want to work at Electric Love Festival applicate at<br>
+            <a href="http://www.electriclove.at/de/jobs" style="color: grey">http://www.electriclove.at/de/jobs</a><br>
+            and choose your preferred job</p>
+    </div>
+
+    <label class="collapse" for="liability">Liability</label>
+    <input id="liability" type="checkbox">
+    <div class="text_shown">
+        <p>The artists and the organisers of Electric Love Festival cannot be held accountable for damage,
+            loss or theft nor for any other accident. For damage of any kind suffered by visitors the organizer
+            only takes responsibility and accepts liability if the damage was caused intentionally or by gross
+            negligence by the organizers or their representatives or agents. Therefore the organizers will not be
+            liable for personal injuries and property damage.</p>
+    </div>
+
+    <label class="collapse" for="lineup">Line Up and Time Table</label>
+    <input id="lineup" type="checkbox">
+    <div class="text_shown">
+        <p><b>Line Up Phase Number 1:</b> <a href="https://www.youtube.com/watch?v=-31HqMLFAoM" style="color: grey">https://www.youtube.com/watch?v=-31HqMLFAoM</a></p>
+        <p><b>Line Up Phase Number 2:</b> <a href="https://www.youtube.com/watch?v=BrnV7SHBf5c" style="color: grey">https://www.youtube.com/watch?v=BrnV7SHBf5c</a></p>
+        <p><b>Line Up Phase Number 3:</b> <a href="https://www.youtube.com/watch?v=F_x-GfWG-Jg" style="color: grey">https://www.youtube.com/watch?v=F_x-GfWG-Jg</a></p>
+    </div>
+
+    <label class="collapse" for="merch">Merchandise</label>
+    <input id="merch" type="checkbox">
+    <div class="text_shown"><p>
+        Merchandise is available at declared stands all over the festival ground. Payment with token only.
+        If you want to buy merchandise articles after the festival visit:<br>
+        <a href="merchandise.electriclove.at" style="color: grey"><b>merchandise.electriclove.at</b></a></p>
+    </div>
+
+    <label class="collapse" for="opening">Opening Hours</label>
+    <input id="opening" type="checkbox">
+    <div class="text_shown"><p>
+        tba assap</p>
+    </div>
+
+    <label class="collapse" for="disability">People with Disabilities</label>
+    <input id="disability" type="checkbox">
+    <div class="text_shown"><p>
+        People with physical disabilities can also join the Electric Love Festival. More information under:<br>
+        +43 (0)6245 71 990 or send us an e-mail -<br>
+        <b>info@electriclove.at</b></p>
+    </div>
+
+    <label class="collapse" for="receive">Receiving Inspection</label>
+    <input id="receive" type="checkbox">
+    <div class="text_shown"><p>
+        There will be controls on forbidden objects, passports and your wristband at all entries at the festival area.
+        Please understand that the securities will check your luggage. Do not loose your wristband and the garbage chip - no replacement will happen.</p>
+    </div>
+
+    <label class="collapse" for="shuttle">Shuttle Service</label>
+    <input id="shuttle" type="checkbox">
+    <div class="text_shown"><p>
+        There is a shuttle service from the train station Salzburg to the festival ground for free. Time table tba.</p>
+    </div>
+
+    <label class="collapse" for="stages">Stages</label>
+    <input id="stages" type="checkbox">
+    <div class="text_shown"><p>
+        tba assap</p>
+    </div>
+
+    <label class="collapse" for="warm">Warm Up Party</label>
+    <input id="warm" type="checkbox">
+    <div class="text_shown"><p>
+        A Warm Up Party will take place on Wednesday - Line Up and Stage tba.</p>
+    </div>
+
+    <label class="collapse" for="faq">What do I do when my question is not answered in the FAQ?</label>
+    <input id="faq" type="checkbox">
+    <div class="text_shown"><p>
+        Make sure to check the FAQ before contacting us. Other questions, that are not answered in the FAQ, can be send to:<br>
+        <b style="color: grey">info@electriclove.at</b></p>
+    </div>
+
+    <label class="collapse" for="wifi">Wifi</label>
+    <input id="wifi" type="checkbox">
+    <div class="text_shown"><p>There is free wifi available at certain spots all over the festival area.</p>
+    </div>
+
+
+    <label class="collapse" for="youth">Youth Protection/Age Restriction</label>
+    <input id="youth" type="checkbox">
+    <div class="text_shown"><p> The minimum age limit for entry to the festival area and the camping area is 16.
+        Even if accompanied by an adult, people 15 and under will not be permitted entrance. The Salzburg Youth
+        Protection Act applies, as amended. The security personal will monitor and control everyone in the area.</p>
+
+        <p>Your identification will be checked at the Electric Love Counter.
+        Accepted: official identity document (e.g. passport or driver's license)
+        Not accepted: student cards</p>
+    </div>
+
+
+
 
 </div>
 
