--- a/sites/faqSites/tickets.html
+++ b/sites/faqSites/tickets.html
@@ -33,26 +33,109 @@
         <div class="col-xs-4 header_back"></div>
     </div>
 
+    <label class="collapse" for="camping">Camping Tickets</label>
+    <input id="camping" type="checkbox">
+    <div class="text_shown"><p><b>Basic Camping Ticket - North & South</b></p>
+        <p>€ 34,00 per person (valid from Wed. 08.07.2015 / 12h00 to Sun. 12.07.2015 / 15h00)</p>
 
-    <div>
-       <input type="checkbox" id="wusel">
-        <h2><label for="wusel">Help me</label></h2>
+        <p><i>Basic Camping North</i></p>
+        <p>For those who travel by car - please note: Don´t forget to buy a parking ticket.
+        The parking is next to the Camping North. Cars are not allowed on the camp site.</p>
 
-        <p>Hier ist mein text der aufklappen solllPellentesque habitant morbi tristique
-            senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam,
-            feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet
-            quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+        <p><i>Basic Camping South</i></p>
+        <p>For those who travel by public transport. There is a shuttle service from Salzburg
+        train station to the festival site for free. There is no parking at Camping South!</p>
 
-    </div>
+        <p>It is not allowed to camp at Camping South as North Camper and vice versa but you can
+            visit your friends during the whole festival time. Hint: For those who travel by car
+            but want to stay with their friends at Camping South - leave your car in the city
+            center of Salzburg and use our shuttle service from Salzburg train station to the
+            festival site. The Basic Camping Ticket does not include access to the Comfort Camping area.
+            For organizational reasons it´s not possible to upgrade your ticket at the festival.
+            Comfort campers can visit the Basic Camping sites anytime.</p><hr>
+
+        <p><b>Comfort Camping - SOLD OUT</b></p>
+        <p>€ 114,00 per tent for 2 people (valid from Wed. 08.07.2015 / 12h00 to Sun. 12.07.2015 / 15h00)
+        Includes:</p><hr>
 
 
-    <label class="collapse" for="1">Collapse 2</label>
-    <input id="1" type="checkbox">
-    <div class="test">Content 1</div>
+        <p><b>Caravan Camping - SOLD OUT</b></p>
+        <p>€ 59,00 per caravan / trailer (valid from Wed. 08.07.2015 / 12h00 to Sun. 12.07.2015 / 15h00)
+        Caravan Camping Ticket and the caravan itself is not included! Note: The Caravan
+            Camping ticket is only valid for the vehicle. Every person staying in the caravan needs to
+            purchase a Camping North ticket. The Caravan Camping ticket does not
+            include access to the Comfort Camping area.</p>
 
-    <label class="collapse" for="2">Collapse 2</label>
-    <input id="2" type="checkbox">
-    <div class="test">Content 2</div>
+        <p><i>The Caravan Camping includes the following services:</i></p>
+
+        <p>As caravan and trailers apply vehicles that offer as many beds as people riding
+            in the vehicle. The maximum length is limited to 8 meters, the maximum weight
+            is limited to 3.5 metric tons. Awnings are allowed. For safety reasons it is not
+            allowed to sleep under the awnings. The positioning of tents between caravans is prohibited .</p>
+
+        <p><b>Parking Ticket North</b>
+        € 10,00 per vehicle</p></div>
+
+    <label class="collapse" for="festival">Festival Tickets</label>
+    <input id="festival" type="checkbox">
+    <div class="text_shown">
+        <p><b>Festival Pass - € 99,00</b></p>
+        <p>Ticket per person (valid from Thu. 09.07.2015 to Sat. 11.07.2015)
+        Standard festival ticket valid for all 3 days with access to all stages at festival site</p>
+        <hr>
+
+        <p><b>Festival V.I.P. - € 169,00 - SOLD OUT</b></p>
+        <p>Ticket per person (valid from Thu. 09.07.2015 to Sat. 11.07.2015)
+        Ticket valid for all 3 days with access to all stages at festival site and elevated V.I.P.
+            platfom next to the mainstage including own bars.</p>
+        <hr>
+        <p><b>Festival Pass V.I.P. GOLD - € 229,00 - SOLD OUT</b></p>
+        <p>Ticket per person (valid from Thu. 09.07.2015 to Sat. 11.07.2015)
+        Ticket valid for all 3 days with access to all stages at the festival site and elevated V.I.P.
+            platfom next to the mainstage and to the Hardstyle stage (open Fri. & Sat.) including own
+            bars. Additional free anti alcoholic drinks & extra toilets at V.I.P. GOLD next to the mainstage.</p>
+        <hr>
+        <p><b>Festival Pass Hardstyle V.I.P. - € 169,00</b></p>
+        <p>Ticket per person (valid from Thu. 09.07.2015 to Sat. 11.07.2015)
+        Ticket valid for all 3 days with access to all stages at festival site with access
+            to elevated V.I.P. platfom to the Hardstyle stage on Fri. & Sat. including own bars.</p>
+        <hr>
+        <p><b> V.I.P. Lodge</b></p>
+        <p>Tickets available from december 2015 - www.electriclove.at/de/revolution-tickets</p>
+        <hr>
+        <p><b>Warm Up Party</b></p>
+        <p>€ 3,00 per person (valid on Wed. 08.07.2015)
+        Warm Up party on Wednesday at the festival site. Line Up und Stage tba.</p>
+        <hr>
+        <p><b>Token Bag with 50 token</b></p>
+        <p>€ 47,50 per bag (5% discount)
+        Those token have a different design and cannot be changed back due to the discount.</p>
+        <hr>
+        <p><b>Token Bag with 100 token</b></p>
+        <p>€ 95,00 per bag (5% discount)
+        Those token have a different design and cannot be changed back due to the discount.</p></div>
+
+    <label class="collapse" for="mail">Confirmation Mail</label>
+    <input id="mail" type="checkbox">
+    <div class="text_shown">We apologise if you have not received the preregistration e-mail.
+        Please contact our ticket provider for fast help -
+        <b>costumerservice@palogic.com</b></div>
+
+    <label class="collapse" for="name">My name is not on the ticket</label>
+    <input id="name" type="checkbox">
+    <div class="text_shown"><p>The name on your online ticket is not relevant at validation.
+        You can easily give your ticket to a friend or resell it.</p></div>
+
+    <label class="collapse" for="day">Day Ticket</label>
+    <input id="day" type="checkbox">
+    <div class="text_shown"><p>There will be day tickets available so far the
+        Electric Love Festival is not already sold out in spring 2015.</p></div>
+
+    <label class="collapse" for="return">Return Ticket</label>
+    <input id="return" type="checkbox">
+    <div class="text_shown"><p>Cancelling your ticket after the purchase is not possible.
+        But since your ticket is not personalized you can easily give it away or resell it.</p></div>
+
 
 </div>
 
