--- a/sites/faqSites/festival.html
+++ b/sites/faqSites/festival.html
@@ -41,7 +41,7 @@
             iOS, Android and other popular providers. It will be around in time for the festival.</p>
     </div>
 
-    <label class="collapse" for="aid">Cancer Aid Association "Mama, Papa hat Krebs"</label>
+    <label class="collapse" for="aid">Cancer Aid Association</label>
     <input id="aid" type="checkbox">
     <div class="text_shown">
         <p>For each sold festival ticket the Electric Love Festival donates € 1,00 to the
@@ -196,7 +196,7 @@
         A Warm Up Party will take place on Wednesday - Line Up and Stage tba.</p>
     </div>
 
-    <label class="collapse" for="faq">What do I do when my question is not answered in the FAQ?</label>
+    <label class="collapse" for="faq">Got no answer in the FAQ?</label>
     <input id="faq" type="checkbox">
     <div class="text_shown"><p>
         Make sure to check the FAQ before contacting us. Other questions, that are not answered in the FAQ, can be send to:<br>
